--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ task-gulp/node_modules
 task-gulp/package-lock.json
 task-gulp/package.json
 .vscode
+express/node_modules
+express/package.json
+express/package-lock.json
